Update compose version for swarm with my docker hub repo

--- a/docker-compose-swarm.yaml
+++ b/docker-compose-swarm.yaml
@@ -1,20 +1,25 @@
-version: "3.8"
 services:
     web:
-        image: shekeriev/bgapp-web
+        image: go6kozavar/bgapp-web
         deploy:
             replicas: 5
         ports:
             - 8080:80
         volumes:
-            - "${PROJECT_ROOT}:/var/www/html:ro"
+            - "/home/vagrant/bgapp/web:/var/www/html:ro"
         networks:
             - app-network
     db:
-        image: shekeriev/bgapp-db
+        image: go6kozavar/bgapp-db
         networks:
             - app-network
         environment:
-            MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+            MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+        secrets:
+            - db_root_password
+secrets:
+    db_root_password:
+        external: true
+
 networks:
     app-network:
