--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,8 @@ services:
         ports:
             - 8081:80
         volumes:
-            - "${PROJECT_ROOT}:/var/www/html:ro"
+            #- "${PROJECT_ROOT}:/var/www/html:ro"
+             - "/projects/test:/var/www/html:ro"
         networks:
             - app-network
         depends_on:
@@ -19,7 +20,8 @@ services:
         networks:
             - app-network
         environment:
-            MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+            #MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+            MYSQL_ROOT_PASSWORD: 12345
 networks:
     app-network:
 
